@@ -1,3 +1,4 @@
+ChangeLog
 History.txt
 License.txt
 Manifest.txt
