@@ -1,5 +1,11 @@
 2007-10-20 Eloy Duran <e.duran@superalloy.nl>
 
+	* Manifest.txt,
+	  lib/rucola/initializer.rb:
+	Some minor cleanup.
+
+2007-10-20 Eloy Duran <e.duran@superalloy.nl>
+
 	* test/test_xcode.rb,
 	  lib/rucola/xcode.rb:
 	Added the last test for the xcode lib.
